--- a/index.html
+++ b/index.html
@@ -5,9 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .block {
+            height: 800px;
+            background-color: blue;
+        }
+
+        iframe {
+            width: 100%;
+            border: none;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="block"></div>
     <iframe src="https://irene-li.github.io/">
 
     </iframe>
